k8s/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: clusterscope-gateway
  namespace: clusterscope
spec:
  gatewayClassName: envoy-gateway-class

  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: clusterscope.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: clusterscope-tls
      allowedRoutes:
        namespaces:
          from: Same
