k8s/gateway/httprout.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: clusterscope-frontend
  namespace: clusterscope
spec:
  parentRefs:
    - name: clusterscope-gateway
      sectionName: https

  hostnames:

    - clusterscope.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: clusterscope-frontend
          port: 80
